# songindex

./: .gitignore  CLAUDE.md  Cargo.toml  bundle.sh  com.songindex.plist
bundle/: Info.plist
src/: config.rs  db.rs  main.rs  scanner.rs  ui.rs
