[package]
name = "songindex"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = "0.29"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rfd = "0.15"
walkdir = "2"
unicode-normalization = "0.1"
dirs = "5"
